# dionysus

./: .gitignore  README.md  pyproject.toml
dionysus/: generator.py  note_event.py  note_sequence.py  parse_to_midi.py  transformations.py
tests/: test_note_event.py  test_note_sequence.py
