[tool.poetry]
name = "dionysus"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Zeb Engberg <zebengberg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.15.0"
pylint = "^2.5.3"
mido = "^1.2.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
